--- a/Inverter/Display/Views/DisplayV.xaml
+++ b/Inverter/Display/Views/DisplayV.xaml
@@ -175,7 +175,7 @@
                 Margin="0"
                 Padding="0"
                 HorizontalOptions="End"
-                ToolTipProperties.Text="Pole wyboru potwierdza zmianę minimalne wartości prądu która załącza styk">
+                ToolTipProperties.Text="Pole wyboru potwierdza zmianę minimalne wartości prądu&#10;Od nie zależy zmiana koloru gałęzi">
                 <HorizontalStackLayout>
                     <CheckBox x:Name="cbStillOpen" CheckedChanged="cbStillOpen_CheckedChanged" />
                     <Entry x:Name="eStillOpen" TextChanged="eStillOpen_TextChanged" />
